# HPC-projetcs

HPC project 2/dgemm/: Makefile  clang0.txt  clang1.txt  clang2.txt  clang3.txt  dgemm  flagcomp.gnu  gcc0.txt  gcc1.txt  gcc2.txt  gcc3.txt  kernels.c  kernels.h  main.c  plt.gnu  pltclust.gnu
HPC project 2/dotprod/: Makefile  clang0.txt  clang1.txt  clang2.txt  clang3.txt  flagcomp.gnu  gcc0.txt  gcc1.txt  gcc2.txt  gcc3.txt  kernels.c  kernels.h  main.c  pltclust.gnu
HPC project 2/reduc/: clang0.txt  clang1.txt  clang2.txt  clang3.txt  flagcomp.gnu  gcc0.txt  gcc1.txt  gcc2.txt  gcc3.txt  kernels.c  kernels.h  main.c  plt.gnu
HPC project 2/system_infos/: caches.txt  cpu_info.txt
climat simulation/: Makefile  README.md  blas.txt  dataplot.gnuplot  plot-simulation.gp  simulation.c  temperature_data.txt
neuronal network/: Makefile  README.md
neuronal network/matrix/: matrix.c  matrix.h
neuronal network/test/: matrixTest.c
projet cpp/: CMakeLists.txt  Equation.cpp  Equation.h  IMesh.h  LaxWendroff.cpp  LaxWendroff.h  Problem.cpp  Problem.h  UniformMesh.cpp  UniformMesh.h  UnitaryTest.cpp  Upwind.cpp  Upwind.h  main.cpp  variable.cpp  variable.h
